fix: hidden overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   width: 100vw;
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
